feat: Rename project from Medibot to MigrantBot across all files
- Updated project name in profile and summarizer files.
- Changed title and application name in HTML and JSON files.
- Modified Firebase configuration to reflect new project name.
- Adjusted notification titles in service worker for push notifications.
- Updated manifest file for web app with new branding.
- Changed encryption key for QR data to match new project name.
- Updated API endpoint URLs in reminder scripts.
- Adjusted Firestore database URLs for admin initialization.
- Updated plain text email and web form messages to reflect new branding.

--- a/create-sample-images.html
+++ b/create-sample-images.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generate Sample Images for MediBot Features</title>
+    <title>Generate Sample Images for MigrantBot Features</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -57,7 +57,7 @@
     </style>
 </head>
 <body>
-    <h1>MediBot Feature Sample Images</h1>
+    <h1>MigrantBot Feature Sample Images</h1>
     <p>Use browser developer tools to save these as images (400x200px each)</p>
 
     <div class="image-generator qr-code">
